fix alignment

--- a/frontend/src/Pages/Profile/MyProfileStyle.css
+++ b/frontend/src/Pages/Profile/MyProfileStyle.css
@@ -7,11 +7,16 @@
     background-color: #F7B41F;
     opacity: 0.4;
     padding: 10%;
-    border-radius: 25px;
+    border-radius: 3em;
     position: absolute;
     top:0;
     left:0;
     height: 100%;
     width: 100%;
     z-index: -1;
+}
+
+#sections {
+    position: absolute;
+    top: 30%;
 }
